Fix Header link V2

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,12 @@
 <!-- Menu dibawah judul bagian atas -->
     <div class="header-links">
 
-<!-- MANUAL TAMBAH LINK  -->
-        <a href="/Reff" title="Reff" ><h2 class="header-link">Reff</h2></a> |
-        <a href="/archive" title="Archive" ><h2 class="header-link">Archive</h2></a> |
-        <a href="/thelist" title="TheList" ><h2 class="header-link">TheList</h2></a> |
-        <a href="/downloads" title="Downloads" ><h2 class="header-link">Downloads</h2></a> |    
-        <a href="/about" title="About" ><h2 class="header-link">About</h2></a>
+<!-- MANUAL TAMBAH LINK 12/04/2023  -->
+        <a href="{{ site.baseurl }}Reff" title="Reff" ><h2 class="header-link">Reff</h2></a> |
+        <a href="{{ site.baseurl }}archive" title="Archive" ><h2 class="header-link">Archive</h2></a> |
+        <a href="{{ site.baseurl }}thelist" title="TheList" ><h2 class="header-link">TheList</h2></a> |
+        <a href="{{ site.baseurl }}downloads" title="Downloads" ><h2 class="header-link">Downloads</h2></a> |    
+        <a href="{{ site.baseurl }}about" title="About" ><h2 class="header-link">About</h2></a>
 
 
 <!--      {% include links.html %}
