--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,10 @@
   
   <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> 
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/png" href="assets/logo.png">
+ 
+
 <!-- Tambahan baru 21-12-2019 myjs.js -->
   <script src="js/myjs.js"></script>
 </head>
